--- a/package.json
+++ b/package.json
@@ -12,6 +12,17 @@
   "devDependencies": {
     "@types/node": "^20.2.5",
     "git-commit-msg-linter": "^3.2.8",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "eslint": "^7.9.0",
+    "eslint-config-standard-with-typescript": "^21.0.1",
+    "eslint-plugin-cypress": "^2.11.1",
+    "eslint-plugin-es": "^4.1.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-react": "^7.21.1",
+    "eslint-plugin-standard": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.2.0",
+    "@typescript-eslint/experimental-utils": "^4.31.1"
   }
 }
