--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.2.5",
+    "@types/jest": "^27.0.1",
+    "@testing-library/jest-dom": "^5.11.4",
     "git-commit-msg-linter": "^3.2.8",
     "typescript": "^4.0.3",
     "eslint": "^7.9.0",
@@ -25,6 +27,9 @@
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/experimental-utils": "^4.31.1",
     "lint-staged": "^11.1.2",
-    "husky": "^7.0.2"
+    "husky": "^7.0.2",
+    "jest": "^27.2.0",
+    "jest-localstorage-mock": "^2.4.3",
+    "ts-jest": "^27.0.5"
   }
 }
