--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
     "@typescript-eslint/no-namespace": "off",
     "no-redeclare": "off",
     "import/export": "off",
+    "no-console": 1,
     "react/jsx-uses-react": "error",
     "react/jsx-uses-vars": "error"
   }
