chore: adjust eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,7 @@
   "env": {
     "cypress/globals": true
   },
-  "plugins": ["react", "cypress"],
+  "plugins": ["react", "@typescript-eslint", "prettier"],
   "parserOptions": {
     "project": "./tsconfig-eslint.json"
   },
@@ -25,7 +25,6 @@
     "@typescript-eslint/no-namespace": "off",
     "no-redeclare": "off",
     "import/export": "off",
-    "no-console": 1,
     "react/jsx-uses-react": "error",
     "react/jsx-uses-vars": "error"
   }
