--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^20.2.5",
-    "@types/jest": "^27.0.1",
+    "prettier": "^2.8.7",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-config-prettier": "^8.8.0",
     "@testing-library/jest-dom": "^5.11.4",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^20.2.5",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/experimental-utils": "^4.31.1",
-    "git-commit-msg-linter": "^3.2.8",
-    "typescript": "^4.0.3",
     "eslint": "^7.9.0",
     "eslint-config-standard-with-typescript": "^21.0.1",
     "eslint-plugin-cypress": "^2.11.1",
@@ -32,10 +33,12 @@
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.21.1",
     "eslint-plugin-standard": "^5.0.0",
-    "lint-staged": "^11.1.2",
+    "git-commit-msg-linter": "^3.2.8",
     "husky": "^7.0.2",
     "jest": "^27.2.0",
     "jest-localstorage-mock": "^2.4.3",
-    "ts-jest": "^27.0.5"
+    "lint-staged": "^11.1.2",
+    "ts-jest": "^27.0.5",
+    "typescript": "^4.0.3"
   }
 }
