--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-config-prettier": "^8.8.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@types/jest": "^27.0.1",
+    "@types/faker": "^5.1.2",
     "@types/node": "^20.2.5",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/experimental-utils": "^4.31.1",
@@ -39,6 +40,7 @@
     "jest-localstorage-mock": "^2.4.3",
     "lint-staged": "^11.1.2",
     "ts-jest": "^27.0.5",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "faker": "^5.1.0"
   }
 }
