--- a/package.json
+++ b/package.json
@@ -16,31 +16,31 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "prettier": "^2.8.7",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-config-prettier": "^8.8.0",
     "@testing-library/jest-dom": "^5.11.4",
-    "@types/jest": "^27.0.1",
     "@types/faker": "^5.1.2",
+    "@types/jest": "^27.0.1",
     "@types/node": "^20.2.5",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/experimental-utils": "^4.31.1",
     "eslint": "^7.9.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard-with-typescript": "^21.0.1",
     "eslint-plugin-cypress": "^2.11.1",
     "eslint-plugin-es": "^4.1.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.21.1",
     "eslint-plugin-standard": "^5.0.0",
+    "faker": "^5.1.0",
     "git-commit-msg-linter": "^3.2.8",
     "husky": "^7.0.2",
     "jest": "^27.2.0",
     "jest-localstorage-mock": "^2.4.3",
     "lint-staged": "^11.1.2",
+    "prettier": "^2.8.7",
     "ts-jest": "^27.0.5",
-    "typescript": "^4.0.3",
-    "faker": "^5.1.0"
+    "typescript": "^4.0.3"
   }
 }
