--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.4",
+    "@types/axios": "^0.14.0",
     "@types/faker": "^5.1.2",
     "@types/jest": "^27.0.1",
     "@types/node": "^20.2.5",
@@ -42,5 +43,8 @@
     "prettier": "^2.8.7",
     "ts-jest": "^27.0.5",
     "typescript": "^4.0.3"
+  },
+  "dependencies": {
+    "axios": "^0.21.4"
   }
 }
